Open up modules for testing on later JDKs